Added reduceQuantity function to iProduct microservice

--- a/iProductService/src/main/resources/application.yaml
+++ b/iProductService/src/main/resources/application.yaml
@@ -11,4 +11,6 @@ spring:
     database-platform: org.hibernate.dialect.MySQL57InnoDBDialect
     hibernate:
       ddl-auto: update
+  application:
+    name: PRODUCT-SERVICE
 
