--- a/iOrderService/src/main/resources/application.yaml
+++ b/iOrderService/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://${DB_HOST:localhost}:3306/orderdb
+    url: jdbc:mysql://${DB_HOST:localhost}:3306/iorderdb
     username: root
     password: asdfghjkl
     driverClassName: com.mysql.cj.jdbc.Driver
@@ -16,11 +16,11 @@ spring:
     name: ORDER-SERVICE
 
 
-#eureka:
-#  instance:
-#    prefer-ip-address: true
-#  client:
-#    fetch-registry: true
-#    register-with-eureka: true
-#    service-url:
-#      defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8050/eureka}
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8050/eureka}
