--- a/iProductService/src/main/resources/application.yaml
+++ b/iProductService/src/main/resources/application.yaml
@@ -14,3 +14,12 @@ spring:
   application:
     name: PRODUCT-SERVICE
 
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8050/eureka}
+
