--- a/iServiceConfig/pom.xml
+++ b/iServiceConfig/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>net.nvsoftware</groupId>
-	<artifactId>ServiceConfig</artifactId>
+	<artifactId>iServiceConfig</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ServiceConfig</name>
+	<name>iServiceConfig</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
